# CineVec

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  orchestrator.py  pyproject.toml  test_rag_db.py
.github/workflows/: cd.yml  ci.yml
cinevec/agent/: evaluate.py  movie_agent.py  prompts.py  search.py
cinevec/data_loader/: __init__.py  data_loader.py
cinevec/db/: build_rag_db.py  ingest_rag.py  model_rag.py
cinevec/embed/: __init__.py  embedder_loader.py
cinevec/ingestion/: __init__.py  ingestion_orchestrator.py
cinevec/ingestion/data_loader/: __init__.py  data_loader.py
cinevec/ingestion/db/: build_rag_db.py  ingest_rag.py  model_rag.py  query_db.py
cinevec/ingestion/embed/: __init__.py  download.py  embedder.py  embedder_loader.py
cinevec/logging/: __init__.py  logger.py
cinevec/monitoring/: __init__.py  db.py  metrics.py  models.py
cinevec/utils/: file_utils.py
config/: config.yaml
data/: ground-truth-retrieval.csv  top10K-TMDB-movies.csv
grafana/dashboards/: cinevec.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasource.yml
notebooks/: data_download.ipynb  retrieval_tuning.ipynb
static/: index.html
