[project]
name = "cinevec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.2",
    "huggingface-hub>=1.22.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "onnxruntime>=1.27.0",
    "pandas>=3.0.3",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-ai>=2.7.0",
    "python-box>=7.4.1",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
    "tokenizers>=0.23.1",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "ruff>=0.15.22",
]

[tool.ruff]
# ruff covers both jobs: `ruff check` lints, `ruff format` formats (a black
# reimplementation -- it produced byte-identical output on this repo).
line-length = 79
exclude = ["notebooks", ".venv"]

[tool.ruff.lint]
# E,F = pyflakes/pycodestyle defaults; I = import sorting; UP = pyupgrade.
select = ["E", "F", "I", "UP"]
# E501 (line too long) is the formatter's job, and it leaves some lines long.
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
# Third-party packages here (onnxruntime, box, pgvector) ship no stubs.
ignore_missing_imports = true
exclude = ["notebooks/", "\\.venv/"]
